Adding last db update value for API endpoint responses
